Modify rating table to ad relation to customer and restaurant

--- a/src/main/webapp/app/entities/rating/rating-detail.component.html
+++ b/src/main/webapp/app/entities/rating/rating-detail.component.html
@@ -21,6 +21,18 @@
                 <dd>
                     <span>{{rating.star}}</span>
                 </dd>
+                <dt><span jhiTranslate="happybourBackEndApp.rating.customer">Customer</span></dt>
+                <dd>
+                    <div *ngIf="rating.customerId">
+                        <a [routerLink]="['/customer', rating.customerId, 'view']">{{rating.customerId}}</a>
+                    </div>
+                </dd>
+                <dt><span jhiTranslate="happybourBackEndApp.rating.restaurant">Restaurant</span></dt>
+                <dd>
+                    <div *ngIf="rating.restaurantId">
+                        <a [routerLink]="['/restaurant', rating.restaurantId, 'view']">{{rating.restaurantId}}</a>
+                    </div>
+                </dd>
             </dl>
 
             <button type="submit"
