--- a/src/main/webapp/app/entities/rating/rating-update.component.html
+++ b/src/main/webapp/app/entities/rating/rating-update.component.html
@@ -12,13 +12,7 @@
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="happybourBackEndApp.rating.comment" for="field_comment">Comment</label>
                     <input type="text" class="form-control" name="comment" id="field_comment"
-                        [(ngModel)]="rating.comment" required/>
-                    <div [hidden]="!(editForm.controls.comment?.dirty && editForm.controls.comment?.invalid)">
-                        <small class="form-text text-danger"
-                        [hidden]="!editForm.controls.comment?.errors?.required" jhiTranslate="entity.validation.required">
-                        This field is required.
-                        </small>
-                    </div>
+                        [(ngModel)]="rating.comment" />
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="happybourBackEndApp.rating.dateCreated" for="field_dateCreated">Date Created</label>
@@ -37,11 +31,19 @@
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="happybourBackEndApp.rating.star" for="field_star">Star</label>
                     <input type="number" class="form-control" name="star" id="field_star"
-                        [(ngModel)]="rating.star" required/>
+                        [(ngModel)]="rating.star" required min="1" jhiMin="1" max="5" jhiMax="5"/>
                     <div [hidden]="!(editForm.controls.star?.dirty && editForm.controls.star?.invalid)">
                         <small class="form-text text-danger"
                         [hidden]="!editForm.controls.star?.errors?.required" jhiTranslate="entity.validation.required">
                         This field is required.
+                        </small>
+                        <small class="form-text text-danger"
+                            [hidden]="!editForm.controls.star?.errors?.min" jhiTranslate="entity.validation.min" translateValues="{ min: 1 }">
+                            This field should be at least 1.
+                        </small>
+                        <small class="form-text text-danger"
+                            [hidden]="!editForm.controls.star?.errors?.max" jhiTranslate="entity.validation.max" translateValues="{ max: 5 }">
+                            This field cannot be more than 5.
                         </small>
                         <small class="form-text text-danger"
                             [hidden]="!editForm.controls.star?.errors?.number" jhiTranslate="entity.validation.number">
@@ -50,6 +52,20 @@
                     </div>
                 </div>
 
+                <div class="form-group">
+                    <label class="form-control-label" jhiTranslate="happybourBackEndApp.rating.customer" for="field_customer">Customer</label>
+                    <select class="form-control" id="field_customer" name="customer" [(ngModel)]="rating.customerId" >
+                        <option [ngValue]="null"></option>
+                        <option [ngValue]="customerOption.id" *ngFor="let customerOption of customers; trackBy: trackCustomerById">{{customerOption.id}}</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label class="form-control-label" jhiTranslate="happybourBackEndApp.rating.restaurant" for="field_restaurant">Restaurant</label>
+                    <select class="form-control" id="field_restaurant" name="restaurant" [(ngModel)]="rating.restaurantId" >
+                        <option [ngValue]="null"></option>
+                        <option [ngValue]="restaurantOption.id" *ngFor="let restaurantOption of restaurants; trackBy: trackRestaurantById">{{restaurantOption.id}}</option>
+                    </select>
+                </div>
             </div>
             <div>
                 <button type="button" id="cancel-save" class="btn btn-secondary"  (click)="previousState()">
