modify coupon table and return api for cart item base on customer id

--- a/src/main/webapp/app/entities/coupon/coupon-detail.component.html
+++ b/src/main/webapp/app/entities/coupon/coupon-detail.component.html
@@ -37,6 +37,10 @@
                 <dd>
                     <span>{{coupon.startFromDate}}</span>
                 </dd>
+                <dt><span jhiTranslate="happybourBackEndApp.coupon.maxAmountToApply">Max Amount To Apply</span></dt>
+                <dd>
+                    <span>{{coupon.maxAmountToApply}}</span>
+                </dd>
                 <dt><span jhiTranslate="happybourBackEndApp.coupon.restaurant">Restaurant</span></dt>
                 <dd>
                     <div *ngIf="coupon.restaurantId">
