--- a/src/main/webapp/app/entities/reservation/reservation-update.component.html
+++ b/src/main/webapp/app/entities/reservation/reservation-update.component.html
@@ -15,20 +15,6 @@
                         [(ngModel)]="reservation.comment" />
                 </div>
                 <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="happybourBackEndApp.reservation.reserverDate" for="field_reserverDate">Reserver Date</label>
-                    <div class="d-flex">
-                        <input id="field_reserverDate" type="datetime-local" class="form-control" name="reserverDate" [(ngModel)]="reserverDate"
-                        />
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="happybourBackEndApp.reservation.updatedDate" for="field_updatedDate">Updated Date</label>
-                    <div class="d-flex">
-                        <input id="field_updatedDate" type="datetime-local" class="form-control" name="updatedDate" [(ngModel)]="updatedDate"
-                        />
-                    </div>
-                </div>
-                <div class="form-group">
                     <label class="form-control-label" jhiTranslate="happybourBackEndApp.reservation.status" for="field_status">Status</label>
                     <input type="text" class="form-control" name="status" id="field_status"
                         [(ngModel)]="reservation.status" />
@@ -42,6 +28,26 @@
                     <label class="form-control-label" jhiTranslate="happybourBackEndApp.reservation.endTime" for="field_endTime">End Time</label>
                     <input type="text" class="form-control" name="endTime" id="field_endTime"
                         [(ngModel)]="reservation.endTime" />
+                </div>
+                <div class="form-group">
+                    <label class="form-control-label" jhiTranslate="happybourBackEndApp.reservation.reserverDate" for="field_reserverDate">Reserver Date</label>
+                    <div class="input-group">
+                        <input id="field_reserverDate" type="text" class="form-control" name="reserverDate" ngbDatepicker  #reserverDateDp="ngbDatepicker" [(ngModel)]="reservation.reserverDate"
+                        />
+                        <span class="input-group-append">
+                            <button type="button" class="btn btn-secondary" (click)="reserverDateDp.toggle()"><fa-icon [icon]="'calendar-alt'"></fa-icon></button>
+                        </span>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="form-control-label" jhiTranslate="happybourBackEndApp.reservation.updatedDate" for="field_updatedDate">Updated Date</label>
+                    <div class="input-group">
+                        <input id="field_updatedDate" type="text" class="form-control" name="updatedDate" ngbDatepicker  #updatedDateDp="ngbDatepicker" [(ngModel)]="reservation.updatedDate"
+                        />
+                        <span class="input-group-append">
+                            <button type="button" class="btn btn-secondary" (click)="updatedDateDp.toggle()"><fa-icon [icon]="'calendar-alt'"></fa-icon></button>
+                        </span>
+                    </div>
                 </div>
 
                 <div class="form-group">
