Add extra field on address entity and product

--- a/src/main/webapp/app/entities/address/address-detail.component.html
+++ b/src/main/webapp/app/entities/address/address-detail.component.html
@@ -17,6 +17,14 @@
                 <dd>
                     <span>{{address.country}}</span>
                 </dd>
+                <dt><span jhiTranslate="happybourBackEndApp.address.supportEmail">Support Email</span></dt>
+                <dd>
+                    <span>{{address.supportEmail}}</span>
+                </dd>
+                <dt><span jhiTranslate="happybourBackEndApp.address.contactNumber">Contact Number</span></dt>
+                <dd>
+                    <span>{{address.contactNumber}}</span>
+                </dd>
                 <dt><span jhiTranslate="happybourBackEndApp.address.restaurant">Restaurant</span></dt>
                 <dd>
                     <div *ngIf="address.restaurantId">
