--- a/src/main/webapp/app/entities/product/product-detail.component.html
+++ b/src/main/webapp/app/entities/product/product-detail.component.html
@@ -29,6 +29,10 @@
                 <dd>
                     <span>{{product.isAvailable}}</span>
                 </dd>
+                <dt><span jhiTranslate="happybourBackEndApp.product.showOnHomepage">Show On Homepage</span></dt>
+                <dd>
+                    <span>{{product.showOnHomepage}}</span>
+                </dd>
                 <dt><span jhiTranslate="happybourBackEndApp.product.restaurant">Restaurant</span></dt>
                 <dd>
                     <div *ngIf="product.restaurantId">
