--- a/src/main/webapp/app/entities/product/product-update.component.html
+++ b/src/main/webapp/app/entities/product/product-update.component.html
@@ -59,6 +59,11 @@
                     <input type="checkbox" class="form-control" name="isAvailable" id="field_isAvailable"
                         [(ngModel)]="product.isAvailable" />
                 </div>
+                <div class="form-group">
+                    <label class="form-control-label" jhiTranslate="happybourBackEndApp.product.showOnHomepage" for="field_showOnHomepage">Show On Homepage</label>
+                    <input type="checkbox" class="form-control" name="showOnHomepage" id="field_showOnHomepage"
+                        [(ngModel)]="product.showOnHomepage" />
+                </div>
 
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="happybourBackEndApp.product.restaurant" for="field_restaurant">Restaurant</label>
