--- a/src/main/webapp/app/entities/product/product.component.html
+++ b/src/main/webapp/app/entities/product/product.component.html
@@ -21,6 +21,7 @@
             <th jhiSortBy="price"><span jhiTranslate="happybourBackEndApp.product.price">Price</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="updatedDate"><span jhiTranslate="happybourBackEndApp.product.updatedDate">Updated Date</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="isAvailable"><span jhiTranslate="happybourBackEndApp.product.isAvailable">Is Available</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <th jhiSortBy="showOnHomepage"><span jhiTranslate="happybourBackEndApp.product.showOnHomepage">Show On Homepage</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="restaurantId"><span jhiTranslate="happybourBackEndApp.product.restaurant">Restaurant</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="categoryId"><span jhiTranslate="happybourBackEndApp.product.category">Category</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th></th>
@@ -35,6 +36,7 @@
                 <td>{{product.price}}</td>
                 <td>{{product.updatedDate | date:'medium'}}</td>
                 <td>{{product.isAvailable}}</td>
+                <td>{{product.showOnHomepage}}</td>
                 <td>
                     <div *ngIf="product.restaurantId">
                         <a [routerLink]="['../restaurant', product.restaurantId , 'view' ]" >{{product.restaurantId}}</a>
